TMO-tf-code-aws-vpc-presentation/modules/security/main.tf
resource "aws_security_group" "default" {
  name        = "${var.name}-sg"
  description = "Default SG"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge({ Name = "${var.name}-sg" }, var.tags)
}

# Security group for VPC Endpoints
resource "aws_security_group" "endpoints" {
  name        = "${var.name}-endpoints-sg"
  description = "Allow HTTPS from private/nonroutable subnets to VPC Endpoints"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = var.endpoint_allowed_cidrs
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge({ Name = "${var.name}-endpoints-sg" }, var.tags)
}
